--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - { tag: 1.1, alpine: '3.19' }
+          - { tag: "1.0", alpine: "3.19" }
 
     steps:
       - name: Checkout code
